--- a/css/cart.css
+++ b/css/cart.css
@@ -61,6 +61,15 @@
     display: flex;
 }
 
+.cartItem:hover{
+    background-color:blue;
+    color: #fff;
+    transform: scale(1.01);
+    box-shadow: rgba(0, 0, 255, 0.4) 3px 3px, rgba(0, 0, 255, 0.3) 6px 6px, rgba(0, 0, 255, 0.2) 9px 9px, rgba(0, 0, 255, 0.1) 12px 12px, rgba(0, 0, 255, 0.05) 15px 15px;
+
+
+}
+
 
 
 .titelPriceX{
@@ -81,7 +90,7 @@
 }
 
 .cart-item-price{
-    background-color: #000;
+    background-color:blue;
     color: #fff;
     border-radius: 0.5rem;
     padding: 0.2rem 0.3rem;
@@ -132,3 +141,4 @@
     font-weight: bold;
 
 }
+
