--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-@font-face {
-    font-family: 'ShareTechMono';
-    src: url(./Share_Tech_Mono/ShareTechMono-Regular.ttf);
-}
 
 :root{
     --bg1: skyblue;
@@ -28,12 +24,7 @@
     box-sizing: border-box;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    padding-bottom: 500px;
-}
+
 
 header {
     background-color:skyblue;
@@ -74,11 +65,11 @@ nav ul {
     align-items: center;
 }
 
-#nav-link{
+/* #nav-link{
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
 nav ul li {
     margin:  1rem;
@@ -139,9 +130,9 @@ a {
     padding: 0.5rem;
 }
 
-.products {
+/* .products {
     padding: 2rem 1rem;
-}
+} */
 
 /**
  * ! Shop items styling starts here
@@ -162,7 +153,7 @@ a {
     border: 2px solid var(--color1);
     border-radius: 10px;
     padding: 1rem;
-    box-shadow: rgba(0, 0, 255, 0.4) 5px 5px, rgba(0, 0, 255, 0.3) 10px 10px, rgba(0, 0, 255, 0.2) 15px 15px, rgba(0, 0, 255, 0.1) 20px 20px, rgba(0, 0, 255, 0.05) 25px 25px;
+    box-shadow: rgba(0, 0, 255, 0.4) 5px 5px, rgba(0, 0, 255, 0.3) 10px 10px, rgba(0, 0, 255, 0.2);
     cursor: pointer;
     transition: transform 0.3s, box-shadow 0.3s;
 }
@@ -225,7 +216,7 @@ footer {
 
 /* button */
 
-.add-to-cart {
+/* .add-to-cart {
     background-color: var(--color4);
     color: white;
     border: none;
@@ -240,7 +231,8 @@ footer {
 
 .add-to-cart:hover {
     background-color: var(--hover1);
-}
+    
+} */
 
 /* About Us Section */
 .about {
@@ -386,6 +378,21 @@ footer {
 /* desktop */
 @media (min-width: 1025px) {
     .shop {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+/* big Desktop */
+@media (min-width: 1600px) {
+    .shop {
         grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+/* biger Desktop */
+
+@media (min-width: 2000px) {
+    .shop {
+        grid-template-columns: repeat(6, 1fr);
     }
 }
